Salvando a URL da imagem em Cliente

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ default.recipient=sanarafm27@gmail.com
 jwt.secret=SequenciaDeCaracteresParaAssinarToken
 jwt.expiration=86400000
 
-aws.access_key_id=
-aws.secret_access_key=
+aws.access_key_id=AKIAIYAV35ONNUBXG5NQ
+aws.secret_access_key=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
 s3.bucket=curso-spring-ionic-sanara
 s3.region=sa-east-1
