Adcicionado inserção de foto para catgoria e produto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,9 @@ s3.region=sa-east-1
 
 img.prefix.client.profile=cp
 img.profile.size=200
+
+img.prefix.categoria=cat
+img.categoria.size=200
+
+img.prefix.produto=prod
+img.produto.size=200
