Aumentando o tamanho máximo permitido para upload

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ img.categoria.size=200
 
 img.prefix.produto=prod
 img.produto.size=200
+
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=10MB
